@@ -590,6 +590,7 @@ $self->{texts} = {
   'Cannot transfer negative entries.' => '',
   'Cannot transfer negative quantities.' => '',
   'Cannot transfer. <br> Reason:<br>#1' => '',
+  'Cannot undo delivery order transfer!' => '',
   'Cannot unlink payment for a closed period!' => '',
   'Carry over account for year-end closing' => '',
   'Carry over shipping address' => '',
@@ -983,6 +984,7 @@ $self->{texts} = {
   'Default transport article number' => '',
   'Default unit'                => '',
   'Default value'               => '',
+  'Defines the interval where undoing transfers from a delivery order are allowed.' => '',
   'Delete'                      => '',
   'Delete Account'              => '',
   'Delete Attachments'          => '',
@@ -3821,6 +3823,7 @@ $self->{texts} = {
   'Transfer To Stock'           => '',
   'Transfer all marked'         => '',
   'Transfer data to Geierlein ELSTER application' => '',
+  'Transfer date exceeds the maximum allowed interval.' => '',
   'Transfer from warehouse'     => '',
   'Transfer in'                 => '',
   'Transfer in via default'     => '',
@@ -3832,6 +3835,7 @@ $self->{texts} = {
   'Transfer qty'                => '',
   'Transfer services via default' => '',
   'Transfer successful'         => '',
+  'Transfer undone.'            => '',
   'Transferred'                 => '',
   'Translation'                 => '',
   'Translations'                => '',
@@ -3850,6 +3854,7 @@ $self->{texts} = {
   'Type of Vendor'              => '',
   'TypeAbbreviation'            => '',
   'Types of Business'           => '',
+  'UNDO TRANSFER'               => '',
   'UNIMPORT'                    => '',
   'USTVA'                       => '',
   'USTVA 2004'                  => '',
@@ -3869,6 +3874,8 @@ $self->{texts} = {
   'Unbalanced Ledger'           => '',
   'Unchecked custom variables will not appear in orders and invoices.' => '',
   'Undo SEPA exports'           => '',
+  'Undo Transfer'               => '',
+  'Undo Transfer Interval'      => '',
   'Unfinished follow-ups'       => '',
   'Unfortunately you have no warehouse defined.' => '',
   'Unimport all'                => '',
